[scala][spark-stream-file-io] test with Spark 3.0.0